styles/Home.module.css
.header {
  text-align: center;
  font-family: Open Sans;
  font-weight: bold;
  font-size: 64px;
  line-height: 87px;
  color: #a74848;
  padding-bottom: 20px;
}
.holder {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 40px;
  flex-wrap: wrap;
}
.leftColumn {
  display: flex;
  flex-direction: column;
  gap: 16px;
}
.colorBoxes {
  display: flex;
  flex-direction: column;
  gap: 16px;
  overflow: auto;
}
.flagColorBox {
  background: #fdfdfd;
  border: 2px solid #eeeeee;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 15px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
}
.colorSwatch {
  width: 50px;
  height: 50px;
  border-radius: 100%;
  cursor: pointer;
  border: 1px solid transparent;
}
.whiteColorSwatch {
  border: 1px solid #bebebe;
}
.colorHexCode {
  font-family: Open Sans;
  font-style: normal;
  font-weight: 600;
  font-size: 28px;
  line-height: 38px;
  color: #333333;
  min-width: 9ex;
  text-align: center;
}
.removeColor {
  font-size: 28px;
  line-height: 32px;
  color: #cb3d3d;
  cursor: pointer;
}
.colorPicker {
  position: absolute;
  transform: translateY(60%);
  z-index: 99;
}
.outsideClickCatcher {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
}
.addButton {
  border: none;
  background: #6b79f9;
  border-radius: 12px;
  font-family: Open Sans;
  font-weight: bold;
  font-size: 35px;
  line-height: 48px;
  text-align: center;
  color: #ffffff;
  outline: none;
  padding: 5px;
  cursor: pointer;
  margin-bottom: 20px;
}
.flag {
  margin-bottom: 15px;
  width: 100%;
  text-align: center;
}
.flag > svg {
  border-radius: 6px;
  max-width: 90vw;
  filter: drop-shadow(2px 2px 29px rgba(0, 0, 0, 0.1));
}
.exportButtons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 15px;
  max-width: 90vw;
  flex-wrap: wrap;
  margin-bottom: 20px;
}
.exportButton {
  flex-grow: 1;
  border: none;
  background: #6b79f9;
  border-radius: 15px;
  font-family: Open Sans;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: #ffffff;
  padding: 10px;
  padding-left: 15px;
  padding-right: 15px;
  cursor: pointer;
}

